--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 *.idea/*
 .idea/workspace.xml
+__pycache__
+.coverage
+.coverage.*
+.DS_Store
+.env
+.mypy_cache
+.pytest_cache
+.qodo
+.ruff_cache
+.tox
+.venv
+.vscode
+[Dd]esktop.ini
+*.lnk
+*.pyc
+pyvenv.cfg
+$RECYCLE.BIN/
+coverage.xml
+env.bak/
+env/
+ENV/
+htmlcov/
+junit.xml
+pytest.xml
+pythonenv*
+Thumbs.db
+venv.bak/
+venv/
